--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,9 @@
     },
     "require": {
         "php": ">=7.3",
-        "symfony/dependency-injection": "^3.4 || ^4.0 || ^5.0",
-        "symfony/http-kernel": "^4.0 || ^5.0",
-        "symfony/config": "~4|~5"
+        "symfony/dependency-injection": "^4.4 || ^5.0",
+        "symfony/http-kernel": "^4.4 || ^5.0",
+        "symfony/config": "^4.4 || ^5.0"
     },
     "require-dev": {
     }
